--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
-        google()
     }
 }
 
@@ -28,7 +28,7 @@ ext {
     gson_version = '2.8.0'
     okhttp_logging_interceptor_version = '3.6.0'
     butterknife_version = '8.5.1'
-    leakcanary_version = '1.5'
+    leakcanary_version = '1.5.4'
     dagger_version = '2.10'
     materialratingbar_version = '1.0.2'
     likebutton_version = '0.2.1'
