--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     compile "com.github.jd-alexander:LikeButton:$rootProject.likebutton_version"
 
     // BottomBar
-    compile "com.roughike:bottom-bar:$rootProject.bottombar_version"
+    compile "com.ashokvarma.android:bottom-navigation-bar:$rootProject.bottombar_version"
 
     // Timber
     compile "com.jakewharton.timber:timber:$rootProject.timber_version"
@@ -99,4 +99,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'org.jetbrains:annotations:15.0'
 }
