--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,28 +21,4 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.google.com' }
     }
-}
-
-ext {
-    support_version = '25.3.1'
-    constraint_layout_version = '1.0.2'
-    retrofit_version = '2.2.0'
-    gson_version = '2.8.0'
-    okhttp_logging_interceptor_version = '3.6.0'
-    butterknife_version = '8.5.1'
-    leakcanary_version = '1.5.4'
-    dagger_version = '2.10'
-    materialratingbar_version = '1.0.2'
-    likebutton_version = '0.2.1'
-    bottombar_version = '2.0.2'
-    timber_version = '4.5.1'
-    room_version = '1.0.0-alpha2'
-    fresco_version = '1.3.0'
-    readmoreTextview_version = '2.0.1'
-    eventBus_version = '3.0.0'
-
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
