Started to migrate the project to kotlin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-API_KEY="YOUR_API_KEY"
+API_KEY="a28afa7bae56cdcac60edec189769acd"
 
 # https://github.com/JakeWharton/butterknife/issues/763
 org.gradle.jvmargs=-Xmx1536m
