--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.themovielist.moviedetail.MovieDetailActivity" />
         <provider
             android:authorities="com.albineli.udacity.popuparmovies.provider"
             android:name="com.themovielist.repository.data.MovieProvider"
