--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.themovielist.moviedetail.MovieDetailActivity" />
+        <activity android:name="com.themovielist.movielist.MovieListActivity" />
         <provider
             android:authorities="com.albineli.udacity.popuparmovies.provider"
             android:name="com.themovielist.repository.data.MovieProvider"
