--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.albineli.udacity.popularmovies">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="com.themovielist.PopularMovieApplication"
         android:allowBackup="true"
@@ -20,11 +21,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.themovielist.moviedetail.MovieDetailActivity" />
+        <activity
+            android:name="com.themovielist.moviedetail.MovieDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name="com.themovielist.movielist.MovieListActivity" />
+
         <provider
-            android:authorities="com.albineli.udacity.popuparmovies.provider"
             android:name="com.themovielist.repository.data.MovieProvider"
+            android:authorities="com.albineli.udacity.popuparmovies.provider"
             android:exported="false" />
     </application>
 
