--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,10 @@ android {
     sourceSets {
         main.java.srcDirs += ['src/main/kotlin']
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
-    def allLibs = [eventBus, fresco, materialRatingBar, likeButton, readMoreTextView, bottomBar, design, favoriteButton]
+    def allLibs = [eventBus, fresco, materialRatingBar, likeButton, readMoreTextView, bottomBar, design, favoriteButton, floatingSearchView]
     implementation defaultLibs + allLibs
 
     // Leak Canary
