--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     sourceSets {
         main.java.srcDirs += ['src/main/kotlin']
     }
+    buildToolsVersion '27.0.1'
 }
 
 dependencies {
