--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.albineli.udacity.popularmovies">
+    package="com.themovielist">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="com.themovielist.PopularMovieApplication"
+        android:name=".PopularMovieApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         tools:replace="allowBackup">
         <activity
-            android:name="com.themovielist.mainactivity.MainActivity"
+            android:name=".mainactivity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -24,15 +24,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.themovielist.moviedetail.MovieDetailActivity"
+            android:name=".moviedetail.MovieDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
-            android:name="com.themovielist.home.fulllist.HomeFullMovieListActivity"
+            android:name=".home.fulllist.HomeFullMovieListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
-            android:name="com.themovielist.repository.data.MovieProvider"
+            android:name=".repository.data.MovieProvider"
             android:authorities="com.albineli.udacity.popuparmovies.provider"
             android:exported="false" />
     </application>
