--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ apply from: '../configuration.gradle'
 
 android {
     compileSdkVersion configuration.compileSdkVersion
-    buildToolsVersion configuration.buildToolsVersion
     defaultConfig {
         applicationId "com.albineli.popularmovies"
         minSdkVersion configuration.minSdkVersion
@@ -36,6 +35,7 @@ android {
     sourceSets {
         main.java.srcDirs += ['src/main/kotlin']
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -49,6 +49,10 @@ dependencies {
     // Dagger
     kapt daggerCompiler
     implementation dagger
+
+    // Room
+    kapt roomRuntime
+    implementation room
 }
 repositories {
     mavenCentral()
