--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,12 +12,12 @@ ext {
             eventBus                : '3.0.0',
             retrofit                : '2.3.0',
             okHttpLoggingInterceptor: '3.6.0',
-            androidArchitecture     : '1.0.0-alpha8',
+            room                    : '1.1.0',
             junit                   : '4.12',
             mockito                 : '2.8.47',
             espresso                : '2.2.2',
             testRunner              : '0.0.4',
-            kotlin                  : '1.2.0',
+            kotlin                  : '1.2.41',
             hamcrest                : '1.3',
             daggerMock              : '0.8.1',
             fresco                  : '1.5.0',
@@ -55,12 +55,12 @@ ext {
             "com.squareup.okhttp3:logging-interceptor:$versions.okHttpLoggingInterceptor"
     ]
 
-    architectureComponents = [
-            "android.arch.lifecycle:runtime:$versions.androidArchitecture",
-            "android.arch.lifecycle:extensions:$versions.androidArchitecture"
+    room = [
+            "android.arch.persistence.room:runtime:$versions.room",
+            "android.arch.persistence.room:rxjava2:$versions.room"
     ]
 
-    architectureComponentCompiler = "android.arch.lifecycle:compiler:$versions.androidArchitecture"
+    roomRuntime = "android.arch.persistence.room:compiler:$versions.room"
 
     constraintLayout = "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
 
