--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
-        maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com' }
+        google()
+        jcenter()
     }
 }
