--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
     versions = [
             support                 : '28.0.0-alpha3',
-            constraintLayout        : '1.1.0',
+            constraintLayout        : '1.1.2',
             rxAndroid               : '2.0.2',
             rxJava                  : '2.1.14',
             dagger                  : '2.10',
@@ -12,7 +12,7 @@ ext {
             eventBus                : '3.0.0',
             retrofit                : '2.3.0',
             okHttpLoggingInterceptor: '3.6.0',
-            room                    : '1.1.0',
+            room                    : '2.0.0-alpha1',
             junit                   : '4.12',
             mockito                 : '2.8.47',
             espresso                : '2.2.2',
@@ -27,6 +27,8 @@ ext {
             floatingSearchView      : '2.1.1',
             androidMaterial         : '1.0.0-alpha3'
     ]
+
+    supportV7 = "androidx.appcompat:appcompat:1.0.0-beta01"
 
     androidMaterial = "com.google.android.material:material:$versions.androidMaterial"
 
@@ -46,11 +48,11 @@ ext {
     ]
 
     room = [
-            "android.arch.persistence.room:runtime:$versions.room",
-            "android.arch.persistence.room:rxjava2:$versions.room"
+            "androidx.room:room-runtime:$versions.room",
+            "androidx.room:room-rxjava2:$versions.room"
     ]
 
-    roomRuntime = "android.arch.persistence.room:compiler:$versions.room"
+    roomRuntime = "androidx.room:room-compiler:$versions.room"
 
     constraintLayout = "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
 
@@ -91,7 +93,7 @@ ext {
 
     daggerMock = "com.github.fabioCollini:DaggerMock:$versions.daggerMock"
 
-    defaultLibs = rxJava + retrofit + kotlin + gson + timber + androidMaterial + constraintLayout
+    defaultLibs = rxJava + retrofit + kotlin + gson + timber + androidMaterial + constraintLayout + supportV7
 
     unitTestLibs = [jUnitDep, mockitoCore]
     androidTestLibs = espresso + [mockitoAndroid, hamcrestCore, daggerMock]
